complete teams section

--- a/G3-Archetects/Style/style.css
+++ b/G3-Archetects/Style/style.css
@@ -30,6 +30,13 @@
   padding: 21px 25px;
   font-size: 1.25rem;
 }
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section {
+  margin-top: 130px;
+}
 /* header styles */
 
 /* navber related styles */
@@ -79,6 +86,30 @@
 .banner-image {
   width: 100%;
 }
+/* team and fetuared related style */
+.teams {
+  align-items: center;
+}
+.team-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-featuers {
+  margin-left: 73px;
+  max-width: 530px;
+}
+.featuers-titles {
+  font-size: 2.813rem;
+  font-weight: 700;
+}
+#quick-list {
+  font-weight: 500;
+}
+#Features {
+  color: rgb(255, 144, 14);
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
   .navbar,
